<resources>
    <string name="app_name">PYes dev</string>
    <string name="free_phone">Free Phone:8000006</string>
    <string name="free_phone_after_update">Call Free To Customer Services</string>
    <string name="whats_app">WhatsApp:+967778559009</string>
    <string name="whats_app_after_update">WhatsApp</string>
    <string name="app_notifications">App Note</string>
    <string name="country_label">Country</string>
    <string name="entity_label">Entity</string>
    <string name="language_label">Language</string>
    <string name="contact_pick_text">Pick Contact</string>
    <string name="contact_name_text">Contact Name</string>
    <string name="creat_account">new Account</string>
    <string name="dont_have_account"> or cLick here to create a </string>
    <string name="user_hello">Hi</string>
    <string name="user_last_log_in">Last Log in :</string>
    <string name="account_balance">Balance</string>
    <string name="database_create_error">error in create database</string>
    <string name="main_services">Main Services</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="repayment_InternetOrBalance">check >></string>
    <string name="repayment_phone_title">RePayment Phone</string>
    <string name="repayment_internet_title">RePayment Internet</string>
    <string name="repayment_adsl_title">RePayment Internet</string>
    <string name="repayment_yemenmobile_title">RePayment Yemen Mobile</string>
    <string name="repayment_sabafon_title">RePayment Saba fon</string>
    <string name="repayment_mtn_title">RePayment MTN</string>
    <string name="repayment_y_title">RePayment Y</string>
    <string name="tabIndicator_balance_Payment">Balance Payment</string>
    <string name="tabIndicator_bouquet_Payment">Bouquet Payment</string>
    <string name="tabIndicator_qurey">Query</string>
    <string name="lastlogin">Last login in:</string>
    <string name="forcelogin_title">Login Check</string>
    <string name="msg_curr_query">Exchange Rates Query</string>
    <string name="msg_account_balance_query">Account balance</string>
    <string name="msg_transfer_money">Transfer money</string>
    <string name="msg_open_account">Open an Account</string>
    <string name="msg_statement_list">Statement List</string>
    <string name="msg_water_bill_payment">Water Bill Payment</string>
    <string name="msg_electricity_bill_payment">Electricity Bill Payment</string>
    <string name="msg_phone_bill_payment">Phone Bill Payment</string>
    <string name="msg_telcom_bill_payment">Mobile Bill Payment</string>
    <string name="msg_internet_bill_payment">Internet Bill Payment</string>
    <string name="bill_payment"> Bill Payment</string>
    <string name="msg_change_password">Change password</string>
    <string name="msg_change_email">Change Email</string>
    <string name="msg_add_account">Add New account</string>
    <string name="msg_from">from</string>
    <string name="msg_for">for</string>
    <string name="msg_to">to</string>
    <string name="msg_or">or</string>
    <string name="msg_and">and</string>
    <string name="msg_graterthan">Greater Than</string>
    <string name="msg_lessthan">Less Than</string>
    <string name="msg_bill_no">NO#</string>
    <string name="msg_check_account">check account and pawword is correct</string>
    <string name="open_account_title">Open Account Request</string>
    <string name="birth_place_label">Birth Place</string>
    <string name="birth_date_label">Birth Date</string>
    <string name="error_no_of_part">Name is not complete!</string>
    <string name="no_of_part">It should consist of</string>
    <string name="parts">Parts</string>
    <string name="at_least">at least</string>
    <string name="value_not_empty">You must be enter the value</string>
    <string name="value_condition">Value mast be </string>
    <string name="condition_format_error">The syntax of conditional is not correct</string>
    <string name="phone_length_and_start_with_zero">The phone number should start with 0 and be 8 digits long</string>
    <string name="phone_or_internet_error">You must be select Phone or Internet</string>
    <string name="mobile_length_and_start_with_zero">The mobile number should start with 7 and be 9 digits long</string>
    <string name="entered_data_error">There is an error with the entered data, review it and try again.</string>
    <string name="missing_info">You must be enter all information before confirmation</string>
    <string name="email_error">Email Format not correct</string>
    <string name="account_services">Accounts Services</string>
    <string name="menu">Menu</string>
    <string name="our_services">Our Services</string>
    <string name="pyes_services">Pyes Services</string>
    <string name="curr_query">Exchange Rates</string>
    <string name="balance_query">Balance Query</string>
    <string name="transfer_money_to_another_account">Transfer money to another account</string>
    <string name="transfer_money_to_cash">Transfer money to cash</string>
    <string name="shopping">Shopping</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="statment_list">Statement List</string>
    <string name="help_screen">Help</string>
    <string name="another_services">Another Services</string>
    <string name="backup">Backup</string>
    <string name="payment">Payment</string>
    <string name="payment_water">The payment of water bill</string>
    <string name="payment_electricity">The payment of electricity bill</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="internet_bouquet">Internet Bouquet</string>
    <string name="balance">رصيد</string>
    <string name="telecom_balance_query">Balance Query</string>
    <string name="subscription_type">Subscription Type</string>
    <string name="linetype">Line Type</string>
    <string name="sim">SIM</string>
    <string name="programmable">Programmable</string>
    <string name="modem">Modem</string>
    <string name="advantages">Advantages</string>
    <string name="gifts">Gifts</string>
    <string name="withoutcredit">Without Credit</string>
    <string name="withcredit">With Credit</string>
    <string name="bouquets">Bouquets</string>
    <string name="service_type">Trans. Type</string>
    <string name="bouquet_type">Bouquet Type</string>
    <string name="advancepayment_status">Advance Payment Status</string>
    <string name="bouquet_dtl">Bouquet</string>
    <string name="amount_bouquet_offer">Amount Category</string>
    <string name="adsl_bouquet_offer">ADSL Bouquet</string>
    <string name="billing_bouquet_offer">Bouquet PrePayed </string>
    <string name="payment_mobile">The payment of Mobile Telcom bill</string>
    <string name="payment_mobile_units">Mobile Pay Units</string>
    <string name="exit">Exit</string>
    <string name="refresh">Download Services</string>
    <string name="contactrefresh">Added Contacts</string>
    <string name="home">Main Activity</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okey">OK</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="favorite_show">Favorite</string>
    <string name="favorite_title">Your Favorites Activity List</string>
    <string name="favorite_add">+Favorite</string>
    <string name="favorite_del">Delete Favorite</string>
    <string name="download_and_install_pyes">Download PYes</string>
    <string name="pyes_download_progress">Update PYes App...</string>
    <string name="to_communicate">To communicate:</string>
    <string name="terms_of_use">Terms of Use | Privacy Policy</string>
    <string name="favorite_added_success">Added successfully</string>
    <string name="favorite_added_not_success">Not added successfully</string>
    <string name="favorite_added_before">This service has already been added to favorites</string>
    <string name="autoComplete_del">Delete Autocomplete</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="delete_not_success">Delete Not Completed</string>
    <string name="note_player_id_err">Player Id not exists in notification application</string>
    <string name="please_wait">Please wait until the application activated by SMS, if activation delayed, try again after making sure that you have a balance to receive messages, and that you are enabled to receive messages in the application.</string>
    <string name="upload_image_pas">Upload images into server completed success</string>
    <string name="upload_image_fail">Upload images into server not completed success</string>
    <string name="images_name_fail">The photos were saved with an incorrect name, take them again or check the client’s phone number.</string>
    <string name="cancel">Cancel</string>
    <string name="query_label">Query</string>
    <string name="date_label">Date</string>
    <string name="mailto_label">Mail To</string>
    <string name="search_first_label">First</string>
    <string name="search_prev_label">Prev</string>
    <string name="search_next_label">Next</string>
    <string name="search_last_label">Last</string>
    <string name="radioAll_label">All</string>
    <string name="radioDate_label">Specific Date</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_more_rows">No More</string>
    <string name="from_account_no_label">Account No</string>
    <string name="to_account_no_label">To account | Service Point</string>
    <string name="account_no">Account No</string>
    <string name="account_name">Account Name</string>
    <string name="account_curr">Curr</string>
    <string name="account_type">Type</string>
    <string name="account_classification">Class</string>
    <string name="is_default">Default</string>
    <string name="mobile_no">Mobile No</string>
    <string name="client_account_no_label">Client Account No</string>
    <string name="client_password">Client Password</string>
    <string name="checkandconfermation">Check and Send Confermation Code</string>
    <string name="confirmation_label">Confermation Code</string>
    <string name="new_account_no_label">Account No</string>
    <string name="amount">Amount</string>
    <string name="cancel_device_license">Cancel Device License</string>
    <string name="password">Password</string>
    <string name="client_name_label">client name</string>
    <string name="client_photo_label">client Photo</string>
    <string name="client_cardfront_label">Front Card Photo</string>
    <string name="client_cardback_label">Back Card Photo</string>
    <string name="client_contract_label">Contract Photo</string>
    <string name="prev_pwd">Prev Password</string>
    <string name="pos_code">POS Code</string>
    <string name="pos_name">POS Name</string>
    <string name="pos_qr_scan">Scan Qr code</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="prev_email">Prev Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="bill_no_label">Bill No#</string>
    <string name="meter_no_label">Meter No#</string>
    <string name="amount_hint">Enter the amount</string>
    <string name="login_label">Login</string>
    <string name="firsttimecheck_label">Register</string>
    <string name="langeE">English </string>
    <string name="langearb">Arabic </string>
    <string name="SelectLan">Select Language </string>
    <string name="next">Next</string>
    <string name="Previous">Previous</string>
    <string name="fawry">direct</string>
    <string name="bouquet">bundle</string>
    <string name="units">units</string>
</resources>