<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="match_parent" android:orientation="vertical">
        <TextView
            android:text="@string/SelectLan"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
android:textColor="@color/color_black"
            android:id="@+id/txturl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnlngE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/langeE"
            android:textSize="20sp"

            android:background="@drawable/btn_circle_w"/>
        <Button
            android:id="@+id/btnlngA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"

            android:text="@string/langearb"
            android:background="@drawable/btn_circle_w"/>


    </LinearLayout>


</LinearLayout>