<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@+id/LinearFullSabafon" android:layout_width="fill_parent" android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/switchRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2.0dip"
            android:visibility="gone"
            app:allowDeselection="false"
            app:dividerColor="@android:color/darker_gray"
            app:menu="@menu/toggles"
            app:selectedColor="@color/sabaLight" />

        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/color_white" app:cardCornerRadius="4.0dip" app:cardUseCompatPadding="true">
            <RadioGroup android:orientation="horizontal" android:id="@+id/rgType" android:background="@drawable/radio_group_shape" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:gravity="center" android:id="@+id/radio_balance_Sabafon" android:background="@drawable/switcher_sabafon" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:button="@null" android:text="@string/fawry" android:layout_weight="1.0" />
                <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:gravity="center" android:id="@+id/radio_bagat_Sabafon" android:background="@drawable/switcher_sabafon" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:button="@null" android:text="@string/bouquet" android:layout_weight="1.0" style="@style/RadtioButton" />
                <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:gravity="center" android:id="@+id/switchOpenUints" android:background="@drawable/switcher_sabafon" android:padding="12.0dip" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:button="@null" android:text="@string/open" android:layout_weight="1.0" style="@style/RadtioButton" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>
        <RadioGroup android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:id="@+id/rbPrepaidSBSHN" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prepaid" />
            <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:id="@+id/rbPostPaidSHN" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/postpaid" />
        </RadioGroup>
        <androidx.cardview.widget.CardView android:id="@+id/OpenUnitsSBFo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/color_white" app:cardCornerRadius="6.0dip" app:cardUseCompatPadding="true">
            <EditText android:id="@+id/SB_unit_Editfot" android:background="@drawable/rounded_w" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/units" android:singleLine="true" android:maxLength="9" android:digits="\ 1234567890" android:drawablePadding="10.0dip" android:inputType="number" android:textAlignment="center" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/LinearFullY" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView android:id="@+id/cardYLineType" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/color_white" app:cardCornerRadius="6.0dip" app:cardUseCompatPadding="true">
            <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:gravity="center" android:id="@+id/rbPrepaidY" android:background="@drawable/switcher_y" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:button="@null" android:text="@string/prepaid" android:layout_weight="1.0" />
                <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:gravity="center" android:background="@drawable/switcher_y" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:button="@null" android:text="@string/postpaid" android:layout_weight="1.0" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>
        <EditText android:id="@+id/etYAmount" android:background="@drawable/rounded_w" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/amount_hint" android:singleLine="true" android:maxLength="6" android:digits="\ 1234567890" android:inputType="number" />
    </LinearLayout>
</LinearLayout>