<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/ll_ServiceType" android:background="@color/color_background" android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/color_white" app:cardCornerRadius="24.0dip" app:cardUseCompatPadding="true">

        <RadioGroup
            android:checkedButton="@+id/rbInternetOrBalance"
            android:orientation="horizontal"
            android:id="@+id/rgServiceType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2.0">

      <!--  <RadioGroup
            android:id="@+id/rgServiceType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:background="@drawable/l_background"
            android:checkedButton="@+id/rbInternetOrBalance"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="100">-->
            <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:gravity="center" android:id="@+id/rbBalance" android:background="@drawable/switch_ym" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:button="@null" android:text="@string/balance" android:layout_weight="1.0" />
            <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:gravity="center" android:id="@+id/rbInternet" android:background="@drawable/switch_ym" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:button="@null" android:text="@string/internet_bouquet" android:layout_weight="1.0" />
            <RadioButton  android:visibility="gone" android:theme="@style/RadtioButton" android:textColor="@color/color_black" android:gravity="center" android:id="@+id/rbInternetOrBalance" android:background="@drawable/switch_ym" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:button="@null" android:text="@string/repayment_InternetOrBalance" android:layout_weight="1.0" />


        </RadioGroup>
    </androidx.cardview.widget.CardView>
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll_LineType" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="rtl">
    <RadioGroup
        android:id="@+id/rgLineType"
        android:checkedButton="@+id/rgPostpaid"
        android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black"             android:id="@+id/rgPrepaid"
            android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prepaid" />
        <RadioButton android:theme="@style/RadtioButton" android:textColor="@color/color_black"             android:id="@+id/rgPostpaid"
            android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/postpaid" />
    </RadioGroup>
    </LinearLayout>
  <LinearLayout android:visibility="gone" android:orientation="horizontal" android:id="@+id/YM_Shn_LINEAR" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="rtl">
      <com.google.android.material.textfield.TextInputLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/amount" android:layout_weight="1.0" app:boxBackgroundColor="@color/color_white" >
          <EditText android:id="@+id/YM_Kasem_EDIT" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="6" android:inputType="number" />
      </com.google.android.material.textfield.TextInputLayout>
      <View android:background="@color/color_background" android:layout_width="5.0dip" android:layout_height="fill_parent" />
      <com.google.android.material.textfield.TextInputLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="صافي الرصيد" android:layout_weight="1.0" app:boxBackgroundColor="@color/color_white" >
          <EditText android:id="@+id/YM_Safi_EDIT" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="6" android:inputType="number" />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/amount" android:layout_weight="1.0" >
          <EditText android:id="@+id/YM_Money_EDIT" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="6" android:inputType="number" />
      </com.google.android.material.textfield.TextInputLayout>
  </LinearLayout>
</LinearLayout>