<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/l_background"
    android:fitsSystemWindows="false"
    android:orientation="vertical">
    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/wave_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

    </com.scwang.wave.MultiWaveHeader>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_logo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pyeslogo_r" />
        </LinearLayout>
        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/login_label"
            android:textColor="@color/color_gold"
            android:textStyle="bold"
            android:textSize="@dimen/title_font_size" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/ic_blogo_1">

            <LinearLayout
                android:id="@+id/parent_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="vertical">

            </LinearLayout>

            <ImageView
                android:id="@+id/im_blogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:alpha="0.2"
                android:background="@drawable/ic_blogo_1"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="start|bottom"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="start"
                android:padding="6dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/color_turquoise"
                android:textSize="@dimen/normal_font_size" />
            <TextView
                android:clickable="true"
                android:id="@+id/createNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/creat_account"
                android:textColor="@color/color_gold"
                android:textStyle="bold"
                android:textSize="@dimen/title_font_size" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lay_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="4">

            <!-- <Button
                android:id="@+id/b_login_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:drawableEnd="@drawable/logout"
                android:drawableRight="@drawable/logout"
                android:text="@string/exit_label"
                android:textColor="@color/color_background"
                android:textSize="@dimen/small_font_size" />-->

            <Button
                android:id="@+id/lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:drawableEnd="@drawable/ic_lang"
                android:drawableRight="@drawable/ic_lang"
                android:text="@string/language_label"
                android:textColor="@color/color_background"
                android:textSize="@dimen/small_font_size" />


            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:drawableEnd="@drawable/ic_pevious"
                android:drawableRight="@drawable/ic_pevious"
                android:text="@string/next"
                android:textColor="@color/color_background"
                android:textSize="@dimen/small_font_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_bottom2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="4">


            <Button
                android:id="@+id/Previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:drawableEnd="@drawable/ic_next"
                android:drawableRight="@drawable/logout"
                android:text="@string/Previous"
                android:textColor="@color/color_background"
                android:textSize="@dimen/small_font_size" />

            <Button
                android:id="@+id/b_FirstTimeCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:drawableEnd="@drawable/reg_w"
                android:drawableRight="@drawable/reg_w"
                android:text="@string/firsttimecheck_label"
                android:textColor="@color/color_background"
                android:textSize="@dimen/small_font_size" />
        </LinearLayout>


    </LinearLayout>